created page generation functionality

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -41,35 +41,39 @@ textarea {
 
 .button-container button {
     align-items: center;
-  background-color: #211a23;
-  border: none;
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: inline-flex;
-  fill: white;
-  font-family: "baskerville", serif;
-  font-size: 16px;
-  font-weight: 600;
-  height: 48px;
-  justify-content: center;
-  letter-spacing: -.8px;
-  line-height: 24px;
-  min-width: 140px;
-  outline: 0;
-  padding: 0 17px;
-  text-align: center;
-  text-decoration: none;
-  transition: all .3s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+    background-color: #211a23;
+    border: none;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    display: inline-flex;
+    fill: white;
+    font-family: "baskerville", serif;
+    font-size: 16px;
+    font-weight: 600;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: -.8px;
+    line-height: 24px;
+    min-width: 140px;
+    outline: 0;
+    padding: 0 17px;
+    text-align: center;
+    text-decoration: none;
+    transition: all .3s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
 .button-container button:hover {
     border-color: #ccc;
     color: #ccc;
     fill: #ccc;
+}
+
+.selected {
+    border: 2px solid #ccc;
 }
 
 .center {
